# spi-solver

./: README.md  pyproject.toml
spi_solver/: dir_watcher.py  main.py
spi_solver/prompts/: solve_spi_prompt.txt
spi_solver/solvers/: chatgpt.py
