[tool.poetry]
name = "spi-solver"
version = "0.1.0"
description = "spi solver"
authors = ["Satoshi <6world4trigger@gmail.com>"]
readme = "README.md"
packages = [
    { include = "spi_solver" },
]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
watchdog = "^6.0.0"
fire = "^0.7.0"
openai = "^1.58.1"
torch = "2.5.0"
intel-extension-for-pytorch = "2.5.0"
autoawq = "^0.2.7"
qwen-vl-utils = "0.0.8"
transformers = "^4.47.1"
torchvision = "0.20.0"
python-dotenv = "^1.0.1"

[tool.poetry.extras]
qwen = [
    "torch",
    "intel-extension-for-pytorch",
    "autoawq",
    "qwen-vl-utils",
    "transformers",
    "torchvision",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
